deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karoo
  labels:
    name: karoo
